--- a/frontend/src/Components/styles.css
+++ b/frontend/src/Components/styles.css
@@ -4,3 +4,16 @@
   overflow-y: scroll;
   scrollbar-width: none;
 }
+
+.notification-badge {
+  position: relative;
+  display: inline-block;
+}
+
+.badge {
+  position: relative;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 0px 5px 0.5px 5px;
+}
